# timekeeper_tg

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  celerybeat-schedule  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 20260219_0001_initial.py  20260220_0002_outbox_due_userprefs.py  20260220_0003_agent_run_traces.py  20260220_0004_add_notes.py  20260220_0005_add_students.py  20260220_0006_students_payment_attendance.py  20260220_0007_tutor_ops_subscription_buffer.py  20260220_0008_student_default_lesson_price.py  20260220_0009_payment_ledger_and_student_crm.py  20260220_0010_perf_indexes.py
app/: main.py
app/api/: deps.py  routes.py
app/bot/: factory.py  handlers.py  middleware.py
app/core/: config.py  container.py  datetime_utils.py  logging.py  security.py
app/db/: models.py  seed.py  session.py
app/domain/: commands.py  enums.py
app/repositories/: agent_run_trace_repository.py  due_notification_repository.py  event_repository.py  note_repository.py  notification_log_repository.py  outbox_repository.py  payment_transaction_repository.py  student_repository.py  user_repository.py
app/scheduler/: celery_app.py  tasks.py
app/services/: ambiguity_store.py  assistant_service.py  bot_response_service.py  command_parser_service.py  confirmation_store.py  dialog_state_store.py  due_index_service.py  event_service.py  export_service.py  json_recovery.py  outbox_delivery_service.py  quick_action_store.py  reminder_dispatch_service.py
docs/: llm_contract.schema.json
tests/: conftest.py
tests/integration/: test_api_routes.py  (+2 more)
timekeeper_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+53 files in other folders)
